fix: use sentence + list scope over summary

--- a/styles/Canonical/000-US-spellcheck.yml
+++ b/styles/Canonical/000-US-spellcheck.yml
@@ -3,7 +3,8 @@ extends: spelling
 message: "The word '%s' seems to be misspelled."
 level: error
 scope:
-  - summary
+  - sentence
+  - list
   - table.header
   - table.cell
 dicpath: "config/dictionaries/"
