--- a/styles/Canonical/020-Cliche-words-and-phrases.yml
+++ b/styles/Canonical/020-Cliche-words-and-phrases.yml
@@ -5,7 +5,8 @@ message: "Avoid the phrase '%s'"
 link: https://docs.ubuntu.com/styleguide/en#words-and-phrases-to-avoid
 level: warning
 scope:
-  - summary
+  - sentence
+  - list
   - heading
   - table.header
   - table.cell
