--- a/styles/Canonical/025a-latinisms-with-english-equivalents.yml
+++ b/styles/Canonical/025a-latinisms-with-english-equivalents.yml
@@ -5,7 +5,8 @@ message: "Instead of '%[2]s', use %[1]s."
 link: https://docs.ubuntu.com/styleguide/en#latin-words-and-phrases
 level: suggestion
 scope:
-  - summary
+  - sentence
+  - list
   - heading
   - table.header
   - table.cell
