--- a/styles/Canonical/500-Repeated-words.yml
+++ b/styles/Canonical/500-Repeated-words.yml
@@ -2,7 +2,8 @@ extends: repetition
 message: "'%s' is repeated!"
 level: warning
 scope:
-  - summary
+  - sentence
+  - list
   - heading
   - table.header
   - table.cell
