--- a/styles/Canonical/003-Ubuntu-names-versions.yml
+++ b/styles/Canonical/003-Ubuntu-names-versions.yml
@@ -7,7 +7,8 @@ link: https://docs.ubuntu.com/styleguide/en/#ubuntu
 nonword: true
 ignorecase: true
 scope: 
-  - summary
+  - sentence
+  - list
   - heading
   - table.header
   - table.cell
