--- a/styles/Canonical/025c-latinisms-to-avoid.yml
+++ b/styles/Canonical/025c-latinisms-to-avoid.yml
@@ -5,7 +5,8 @@ message: "Don't use academic Latin terms like 'a posteriori', 'et al', and 'stet
 link: https://docs.ubuntu.com/styleguide/en#latin-words-and-phrases
 level: warning
 scope:
-  - summary
+  - sentence
+  - list
   - heading
   - table.header
   - table.cell
