--- a/action.yml
+++ b/action.yml
@@ -21,9 +21,9 @@ runs:
         echo "Styles copied to working dir"
         fi
 
-        if ! test -d ./styles/config/vocabularies/Canonical; then
-        mkdir -p styles/config/vocabularies/Canonical
-        cp $ACTION_DIR/styles/config/vocabularies/Canonical/* styles/config/vocabularies/Canonical/
+        if ! test -d ./styles/config; then
+        mkdir -p styles/config
+        cp -r $ACTION_DIR/styles/config/* styles/config/
         echo "Vocab copied to working dir"
         tree styles
         fi
